# AmplitudeSDK

./: .editorconfig  AmplitudeWPFSDK.sln  CMakeLists.txt  Directory.Build.props  README.md  global.json
AmplitudeInterop/: CMakeLists.txt  Interop.cpp  Interop.h
AmplitudeSDK/: Amplitude.cpp  CMakeLists.txt  IAmplitude.h
AmplitudeSDK/Include/AmplitudeSDK/: Amplitude.h  AmplitudeBackgroundEventTransmitter.h  AmplitudeEvent.h  AmplitudeEventFactory.h  AmplitudeEventQueue.h  AmplitudeExponentialBackoff.h  AmplitudeNetworkCalls.h  IAmplitude.h  IAmplitudeBackgroundEventTransmitter.h  IAmplitudeEventFactory.h  IAmplitudeEventQueue.h  IAmplitudeExponentialBackoff.h  IAmplitudeNetworkCalls.h  IDeviceIDRetriever.h  IUserIDRetriever.h  IUserPropertiesRetriever.h
AmplitudeSDK/Source/: Amplitude.cpp  AmplitudeBackgroundEventTransmitter.cpp  AmplitudeEventFactory.cpp  AmplitudeEventQueue.cpp  AmplitudeExponentialBackoff.cpp  AmplitudeNetworkCalls.cpp
AmplitudeSDKHarness/: CMakeLists.txt  main.cpp
AmplitudeWPFHarness/: AmplitudeWPFHarness.csproj  App.config  App.xaml  App.xaml.cs  CMakeLists.txt  MainWindow.xaml  MainWindow.xaml.cs  MainWindowViewModel.cs  RelayCommand.cs  main.cs
AmplitudeWPFHarness/Properties/: AssemblyInfo.cs  launchSettings.json
